; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_dwarf2-frame.c_dwarf2_frame_state_copy_regs.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_dwarf2-frame.c_dwarf2_frame_state_copy_regs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dwarf2_frame_state_reg = type { i32 }
%struct.dwarf2_frame_state_reg_info = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.dwarf2_frame_state_reg* (%struct.dwarf2_frame_state_reg_info*)* @dwarf2_frame_state_copy_regs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.dwarf2_frame_state_reg* @dwarf2_frame_state_copy_regs(%struct.dwarf2_frame_state_reg_info* %0) #0 {
  %2 = alloca %struct.dwarf2_frame_state_reg_info*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.dwarf2_frame_state_reg*, align 8
  store %struct.dwarf2_frame_state_reg_info* %0, %struct.dwarf2_frame_state_reg_info** %2, align 8
  %5 = load %struct.dwarf2_frame_state_reg_info*, %struct.dwarf2_frame_state_reg_info** %2, align 8
  %6 = getelementptr inbounds %struct.dwarf2_frame_state_reg_info, %struct.dwarf2_frame_state_reg_info* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = sext i32 %7 to i64
  %9 = mul i64 %8, 8
  store i64 %9, i64* %3, align 8
  %10 = load i64, i64* %3, align 8
  %11 = call i64 @xmalloc(i64 %10)
  %12 = inttoptr i64 %11 to %struct.dwarf2_frame_state_reg*
  store %struct.dwarf2_frame_state_reg* %12, %struct.dwarf2_frame_state_reg** %4, align 8
  %13 = load %struct.dwarf2_frame_state_reg*, %struct.dwarf2_frame_state_reg** %4, align 8
  %14 = load %struct.dwarf2_frame_state_reg_info*, %struct.dwarf2_frame_state_reg_info** %2, align 8
  %15 = getelementptr inbounds %struct.dwarf2_frame_state_reg_info, %struct.dwarf2_frame_state_reg_info* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load i64, i64* %3, align 8
  %18 = call i32 @memcpy(%struct.dwarf2_frame_state_reg* %13, i32 %16, i64 %17)
  %19 = load %struct.dwarf2_frame_state_reg*, %struct.dwarf2_frame_state_reg** %4, align 8
  ret %struct.dwarf2_frame_state_reg* %19
}

declare dso_local i64 @xmalloc(i64) #1

declare dso_local i32 @memcpy(%struct.dwarf2_frame_state_reg*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
